# ag_ui

./: .gitignore  lotto.py  pyproject.toml  test_stream.py
lotto_analytic/: check_rank.py  combined_500.xlsx  generate_unique.py  lotto_generator.py  past_lotto.xlsx  result.xlsx
lotto_analytic/.claude/: settings.local.json
lotto_analytic/20260516/: lotto__excl-1-16-27-34-45__20260510-174058_r030.xlsx  lotto__excl-1-2-4-10-12-17-18-20-28-32-44-45__20260511-211111_r020.xlsx
lotto_analytic/picks/: lotto__excl-1-16-27-34-45__20260510-174056_r001.xlsx  lotto__excl-1-16-27-34-45__20260510-174056_r002.xlsx  lotto__excl-1-16-27-34-45__20260510-174056_r003.xlsx  lotto__excl-1-16-27-34-45__20260510-174056_r004.xlsx  lotto__excl-1-16-27-34-45__20260510-174056_r005.xlsx  lotto__excl-1-16-27-34-45__20260510-174056_r006.xlsx  lotto__excl-1-16-27-34-45__20260510-174057_r007.xlsx  lotto__excl-1-16-27-34-45__20260510-174057_r008.xlsx  lotto__excl-1-16-27-34-45__20260510-174057_r009.xlsx  lotto__excl-1-16-27-34-45__20260510-174057_r010.xlsx  lotto__excl-1-16-27-34-45__20260510-174057_r011.xlsx  lotto__excl-1-16-27-34-45__20260510-174057_r012.xlsx  lotto__excl-1-16-27-34-45__20260510-174057_r013.xlsx  lotto__excl-1-16-27-34-45__20260510-174057_r014.xlsx  lotto__excl-1-16-27-34-45__20260510-174057_r015.xlsx  lotto__excl-1-16-27-34-45__20260510-174057_r016.xlsx  lotto__excl-1-16-27-34-45__20260510-174057_r017.xlsx  lotto__excl-1-16-27-34-45__20260510-174057_r018.xlsx  lotto__excl-1-16-27-34-45__20260510-174057_r019.xlsx  (+169 more)
src/: checkpoint.py  graph.py  main.py  stream.py
(+41 files in other folders)
